[tool.poetry]
name = "elevate-interview-solution"
version = "0.1.0"
description = ""
authors = ["Tyler Stapler <tystapler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
httpx = "^0.19.0"
uvicorn = "^0.15.0"
APScheduler = "^3.7.0"
aiocache = "^0.11.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
msgpack = "^1.0.2"
orjson = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
